# karl-sims-recreated

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  dev.sh  karl-sims.db  karl-sims.db-shm  karl-sims.db-wal
.claude/agents/: alan.md  lex.md  malcolm.md  muldoon.md  nedry.md  wu.md
.playwright-mcp/: page-2026-04-03T21-52-57-675Z.yml  page-2026-04-03T21-53-42-435Z.yml  page-2026-04-03T22-12-49-594Z.yml
album/: creatures.json  diary.html  index.html
core/: Cargo.toml
core/src/: body.rs  brain.rs  collision.rs  creature.rs  creature_def.rs  evolution.rs  featherstone.rs  fitness.rs  genotype.rs  integrator.rs  joint.rs  lib.rs  mating.rs  mutation.rs  phenotype.rs  rapier_world.rs  scene.rs  spatial.rs  water.rs  world.rs
creatures/: swimmer-snake.json  swimmer-starfish.json  walker-biped.json  walker-quadruped.json
docs/: debugging-creature-physics.html  exploits.md  shifty-movement.html
docs/superpowers/plans/: 2026-04-03-m1-visual-proof-of-life.md  2026-04-03-m2-featherstone-dynamics.md  2026-04-03-m3-integration-water-collision.md  2026-04-03-m4-genotype-phenotype-brain.md  2026-04-04-m5-genetic-algorithm.md  2026-04-04-m6-server-evolution.md  2026-04-04-m7-full-frontend.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Layout.tsx  api.ts  router.ts  routes.tsx  wasm.ts
frontend/src/components/: BrainGraph.tsx  CreateEvolutionForm.tsx  CreatureViewer.tsx  FitnessChart.tsx  IslandBestsGrid.tsx  IslandFitnessChart.tsx  MorphologyGraph.tsx  PhenotypeGraph.tsx  StatusBadge.tsx  ZoomableSvg.tsx
frontend/src/hooks/: useRoute.ts  useWebSocket.ts
frontend/src/pages/: CreatureDetail.tsx  Dashboard.tsx  EvolutionDetail.tsx  EvolutionList.tsx  Viewer.tsx
frontend/src/utils/: videoExport.ts
logs/: ALAN.md  LEX.md  MALCOLM.md  MULDOON.md  NEDRY.md  WU.md
server/: Cargo.toml
server/src/: api.rs  coordinator.rs  db.rs  engine.rs  lib.rs  main.rs  timing.rs  worker.rs  ws.rs
specs/: 2026-04-05-map-elites.md
tools/: capture-video.sh  export-frames.py  prune-db.sh
web/: Cargo.toml
web/src/: camera.rs  gpu_types.rs  lib.rs  renderer.rs  shader.wgsl
