[package]
name = "karl-sims-core"
version = "0.1.0"
edition.workspace = true

[features]
default = []
rapier-physics = ["dep:rapier3d-f64"]

[dependencies]
glam = { version = "0.30", features = ["scalar-math", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
rand_chacha = "0.3"
rapier3d-f64 = { version = "0.32", optional = true }
