[package]
name = "karl-sims-server"
version = "0.1.0"
edition.workspace = true
default-run = "karl-sims-server"

[[bin]]
name = "karl-sims-server"
path = "src/main.rs"

[[bin]]
name = "karl-sims-debug"
path = "src/bin/debug.rs"

[[bin]]
name = "karl-sims-simulate"
path = "src/bin/simulate.rs"

[dependencies]
karl-sims-core = { path = "../core" }
glam = "0.30"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
bincode = "1"
rand = "0.8"
rand_chacha = "0.3"
num_cpus = "1"
log = "0.4"
env_logger = "0.11"
