[package]
name = "karl-sims-web"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
karl-sims-core = { path = "../core" }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["scalar-math"] }
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "MouseEvent", "WheelEvent", "EventTarget",
    "AddEventListenerOptions",
] }
console_log = "1"
console_error_panic_hook = "0.1"
bincode = "1"
getrandom = { version = "0.2", features = ["js"] }
