[package]
name = "karl-sims-web"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
karl-sims-core = { path = "../core" }
glam = { version = "0.30", features = ["scalar-math"] }
log = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"
bincode = "1"
getrandom = { version = "0.2", features = ["js"] }
